--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 **.idea/
 **.DS_Store
 .vscode/
+
 # Compiled Object files
 *.slo
 *.lo
@@ -31,3 +32,9 @@
 *.exe
 *.out
 *.app
+
+# CMake
+CMakeFiles/
+cmake_install.cmake
+CMakeCache.txt
+Makefile
